hyperdb-api-derive/tests/ui/fail/derive_table_on_enum.rs
use hyperdb_api_derive::Table;

#[derive(Table)]
enum Color {
    Red,
    Green,
    Blue,
}

fn main() {}
