hyperdb-api-derive/tests/ui/fail/derive_table_on_enum.stderr
error: Table cannot be derived on enums
 --> tests/ui/fail/derive_table_on_enum.rs:4:6
  |
4 | enum Color {
  |      ^^^^^
